Name: reactive-banana-gtk
Version: 0.5
Synopsis: Reactive Banana bindings for GTK2/GTK3.
Description: Bindings for using GTK2/GTK3 with Reactive Banana.
License: BSD3
License-file: LICENSE
Author: Jelle Lingier
Maintainer: Jelle Lingier <jelle.lingier@gmail.com>
Category: FRP
Build-type: Simple
Cabal-version: >= 1.10

Library
   hs-source-dirs: src
   build-depends: base >= 4 && < 5,
                  glib >= 0.13.2.1,
                  reactive-banana >= 1,
                  transformers >= 0.4.2,
                  lifted-base >= 0.2.3.6
   exposed-modules: Reactive.Banana.Gtk
   other-Modules: Reactive.Banana.Gtk.Shared
                  Reactive.Banana.Gtk.Event
                  Reactive.Banana.Gtk.EventEx
   build-tools: hsc2hs
   ghc-options: -Wall -O2 -funbox-strict-fields -fwarn-tabs
   default-language: Haskell2010
